--- a/css/design.css
+++ b/css/design.css
@@ -15,7 +15,8 @@ body {
 }
 /*-------------header-------------*/
 #header {
-    height: 380px;
+    height: 379px;
+    overflow: hidden;
 }
 #header .cf_video {
     width:74.41860465116279%;
@@ -34,12 +35,68 @@ body {
     width: 50%;
     float:left;
 }
+#list li figure:nth-of-type(1) {
+    height: 124px;
+}
 #list li p {
-    line-height: 125px;
+    line-height: 100px;
     text-align: center;
+}
+#list::after { /*float를 해제하는 clearfix 기법, 일종의 hack*/
+    content:'';
+    display: block;
+    height: 0;
+    clear:both;
+}
+.aside + h2 {
+    text-align: center;
+    font-size: 20px;
+    padding: 20px 0;
 }
 /*-------------honda_map-------------*/
 #map {
     width:860px;
-    height:640px;
+    height:300px;
+}
+.traffic {
+    list-style: none;
+}
+.traffic li {
+    line-height: 92px;
+    padding-left: 120px;
+    margin:20px 0;
+    font-size: 1.125rem;
+}
+.traffic li:nth-child(1) {
+    background-image: url("../images/map_icon1.png");
+    background-repeat: no-repeat;
+    background-position: 0 0;
+}
+.traffic li:nth-child(2) {
+    background-image: url("../images/map_icon2.png");
+    background-repeat: no-repeat;
+    background-position: 0 0;
+}
+.traffic li:nth-child(3) {
+    background-image: url("../images/map_icon3.png");
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    line-height: 1.5;
+    min-height: 92px;
+    box-sizing: border-box;
+    padding-top:15px ;
+}
+/*---------------footer------------*/
+.gubun {
+    margin-bottom: 0;
+}
+.footer_logo {
+    float:left;
+    margin-top: 0;
+}
+.copy_info {
+    float:right;
+    text-transform: uppercase;
+    line-height: 95px;
+    font-size: 12px;
 }
