--- a/css/design.css
+++ b/css/design.css
@@ -34,6 +34,7 @@ body {
 #list li {
     width: 50%;
     float:left;
+    text-align: center;
 }
 #list li figure:nth-of-type(1) {
     height: 124px;
@@ -41,6 +42,9 @@ body {
 #list li p {
     line-height: 100px;
     text-align: center;
+    color:#a20000;
+    font-weight: bolder;
+
 }
 #list::after { /*float를 해제하는 clearfix 기법, 일종의 hack*/
     content:'';
@@ -52,6 +56,7 @@ body {
     text-align: center;
     font-size: 20px;
     padding: 20px 0;
+    color:#000;
 }
 /*-------------honda_map-------------*/
 #map {
@@ -99,4 +104,5 @@ body {
     text-transform: uppercase;
     line-height: 95px;
     font-size: 12px;
+    color:#888;
 }
